# media-insights

./: .dockerignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  alembic.ini  config.example.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 1f992a448750_initial_schema.py  d0f4d45356ad_initial_schema.py
docker/: entrypoint.sh
src/media_insights/: __init__.py  cli.py  config.py  config_store.py  db.py  language.py  models.py  query_params.py  subtitle_coverage.py
src/media_insights/api/: __init__.py  app.py  serializers.py
src/media_insights/classify/: __init__.py  classifier.py  misfiled.py
src/media_insights/discovery/: __init__.py  extensions.py  fingerprint.py  grouping.py  plexmatch.py  subtitles.py  walker.py
src/media_insights/events/: __init__.py  bus.py  dispatcher.py  exec.py  webhook.py
src/media_insights/matching/: __init__.py  matcher.py  parser.py  providers.py
src/media_insights/matching/providers/: __init__.py  anilist.py  base.py  http.py  tmdb.py  tvdb.py
src/media_insights/migrations/: env.py
src/media_insights/migrations/versions/: 2cecca291ed0_add_track_language_raw_column.py  3c2759616df0_add_provider_metadata_columns_to_media_.py  d0f4d45356ad_initial_schema.py
src/media_insights/probe/: __init__.py  ffprobe.py  mediainfo.py  normalize.py
src/media_insights/scanner/: __init__.py  scheduler.py  service.py  watcher.py
src/media_insights/web/: __init__.py
src/media_insights/web/static/: app.css
src/media_insights/web/templates/: base.html  dashboard.html  events.html  item.html  libraries.html  misfiled.html  search.html  subtitle_coverage.html  titles.html  unmatched.html
tests/: conftest.py  test_api.py  test_api_libraries.py  test_api_tracks.py  test_classifier.py  test_config.py  test_config_store.py  test_dispatcher.py  test_e2e_change.py  test_e2e_delete.py  test_e2e_scan.py  test_enrich.py  test_fingerprint.py  test_language.py  test_matcher.py  test_migrations.py  test_normalize.py  test_plexmatch.py  test_providers.py  test_query_params.py  test_reclassify_misfiled.py  test_scan_concurrency.py  test_scan_incremental_classify.py  test_scan_logging.py  test_subtitle_coverage.py  test_subtitles.py  test_walker.py  test_watcher.py  test_web_titles.py
tests/fixtures/: __init__.py  media_factory.py
