[project]
name = "media-insights"
version = "0.0.7"
description = "Indexer and classifier for media libraries: probe files, track changes, classify anime/tv/movie, emit notifications."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "William Okano" }]
keywords = ["media", "plex", "sonarr", "radarr", "ffmpeg", "ffprobe", "mediainfo", "anime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia",
  "Topic :: System :: Filesystems",
]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "typer>=0.15",
  "sqlalchemy>=2.0",
  "alembic>=1.14",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "ruamel.yaml>=0.18",
  "watchdog>=6.0",
  "apscheduler>=3.10",
  "guessit>=3.5",
  "babelfish>=0.6",
  "pymediainfo>=7.0",
  "httpx>=0.27",
  "jinja2>=3.1",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
  "types-pyyaml>=6.0",
]

[project.scripts]
media-insights = "media_insights.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/media_insights"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501", "B008", "SIM102", "SIM103", "SIM105", "F601"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N"]
# Autogenerated by alembic; the mako template leaves trailing whitespace.
"src/media_insights/migrations/versions/*" = ["W291"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
files = ["src"]
warn_unused_ignores = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["pymediainfo.*", "watchdog.*", "watchdog.observers.*", "apscheduler.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["media_insights.web.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["media_insights.scanner.watcher"]
ignore_errors = false

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]